--- a/01--edi/04--csv.ipynb
+++ b/01--edi/04--csv.ipynb
@@ -25,86 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting to s3.eu-central-1.amazonaws.com (52.219.73.80:443)\n",
-      "otomoto.csv          100% |********************************| 19.9M  0:00:00 ETA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://s3.eu-central-1.amazonaws.com/jkan.pl/data-science/uek/otomoto.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "it tooks {} secconds 0.12576866149902344\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['\"id\"',\n",
-       " '\"url\"',\n",
-       " '\"Faktura VAT\"',\n",
-       " '\"Marka pojazdu\"',\n",
-       " '\"Model pojazdu\"',\n",
-       " '\"Kategoria\"',\n",
-       " '\"Pojemność skokowa\"',\n",
-       " '\"Liczba miejsc\"',\n",
-       " '\"Zarejestrowany w Polsce\"',\n",
-       " '\"Wersja\"',\n",
-       " '\"Typ\"',\n",
-       " '\"Rok produkcji\"',\n",
-       " '\"Serwisowany w ASO\"',\n",
-       " '\"Leasing\"',\n",
-       " '\"VIN\"',\n",
-       " '\"Homologacja ciężarowa\"',\n",
-       " '\"VAT marża\"',\n",
-       " '\"Pierwszy właściciel\"',\n",
-       " '\"Filtr cząstek stałych\"',\n",
-       " '\"Rodzaj paliwa\"',\n",
-       " '\"Emisja CO2\"',\n",
-       " '\"Kraj pochodzenia\"',\n",
-       " '\"Numer rejestracyjny pojazdu\"',\n",
-       " '\"Bezwypadkowy\"',\n",
-       " '\"Stan\"',\n",
-       " '\"Pierwsza rejestracja\"',\n",
-       " '\"title\"',\n",
-       " '\"price\"',\n",
-       " '\"Skrzynia biegów\"',\n",
-       " '\"Perłowy\"',\n",
-       " '\"Kierownica po prawej (Anglik)\"',\n",
-       " '\"Liczba drzwi\"',\n",
-       " '\"Metalik\"',\n",
-       " '\"Przebieg\"',\n",
-       " '\"Akryl (niemetalizowany)\"',\n",
-       " '\"Możliwość finansowania\"',\n",
-       " '\"Uszkodzony\"',\n",
-       " '\"Oferta od\"',\n",
-       " '\"Kod Silnika\"',\n",
-       " '\"Kolor\"',\n",
-       " '\"Napęd\"',\n",
-       " '\"Moc\"\\n']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from time import time\n",
@@ -128,59 +60,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OrderedDict([('id', '6034090022'),\n",
-      "             ('url',\n",
-      "              'https://www.otomoto.pl/oferta/mercedes-benz-klasa-g-350d-pakiet-amg-designo-manufaktur-edition-ID6AmqsC.html'),\n",
-      "             ('Faktura VAT', 'Tak'),\n",
-      "             ('Marka pojazdu', 'Mercedes-Benz'),\n",
-      "             ('Model pojazdu', 'Klasa G'),\n",
-      "             ('Kategoria', 'Osobowe'),\n",
-      "             ('Pojemność skokowa', '2 987 cm3'),\n",
-      "             ('Liczba miejsc', '5'),\n",
-      "             ('Zarejestrowany w Polsce', 'Tak'),\n",
-      "             ('Wersja', 'W463 (1992-)'),\n",
-      "             ('Typ', 'SUV'),\n",
-      "             ('Rok produkcji', '2016'),\n",
-      "             ('Serwisowany w ASO', 'Tak'),\n",
-      "             ('Leasing', ''),\n",
-      "             ('VIN', 'WDB4633481X263455'),\n",
-      "             ('Homologacja ciężarowa', ''),\n",
-      "             ('VAT marża', ''),\n",
-      "             ('Pierwszy właściciel', 'Tak'),\n",
-      "             ('Filtr cząstek stałych', 'Tak'),\n",
-      "             ('Rodzaj paliwa', 'Diesel'),\n",
-      "             ('Emisja CO2', '261 g/km'),\n",
-      "             ('Kraj pochodzenia', 'Polska'),\n",
-      "             ('Numer rejestracyjny pojazdu', 'DSR40090'),\n",
-      "             ('Bezwypadkowy', 'Tak'),\n",
-      "             ('Stan', 'Używane'),\n",
-      "             ('Pierwsza rejestracja', ''),\n",
-      "             ('title', 'Mercedes-Benz Klasa G W463'),\n",
-      "             ('price', '434900.0'),\n",
-      "             ('Skrzynia biegów', 'Automatyczna hydrauliczna (klasyczna)'),\n",
-      "             ('Perłowy', ''),\n",
-      "             ('Kierownica po prawej (Anglik)', ''),\n",
-      "             ('Liczba drzwi', '5'),\n",
-      "             ('Metalik', 'Tak'),\n",
-      "             ('Przebieg', '52 904 km'),\n",
-      "             ('Akryl (niemetalizowany)', ''),\n",
-      "             ('Możliwość finansowania', 'Tak'),\n",
-      "             ('Uszkodzony', ''),\n",
-      "             ('Oferta od', 'Firmy'),\n",
-      "             ('Kod Silnika', 'G 350'),\n",
-      "             ('Kolor', 'Szary'),\n",
-      "             ('Napęd', '4x4 (stały)'),\n",
-      "             ('Moc', '245 KM')])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pprint\n",
@@ -207,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,27 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "collections.OrderedDict"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(data[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,29 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Volkswagen', 5598),\n",
-       " ('Opel', 4361),\n",
-       " ('BMW', 4254),\n",
-       " ('Audi', 4016),\n",
-       " ('Ford', 3643),\n",
-       " ('Mercedes-Benz', 3080),\n",
-       " ('Renault', 2684),\n",
-       " ('Toyota', 2525),\n",
-       " ('Škoda', 2370),\n",
-       " ('Peugeot', 1906)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cnt = Counter(brands)\n",
     "cnt.most_common(10)"
@@ -278,7 +129,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "pip install pandas matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = pd.read_csv('otomoto.csv', delimiter=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_brand = X.groupby(['Marka pojazdu']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_brand = X[['id', 'Marka pojazdu']].groupby(['Marka pojazdu']).agg('count').rename(columns={'id': 'adv_count'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_brand.sort_values(by='adv_count', ascending=False)[:20].plot.bar()"
+   ]
   },
   {
    "cell_type": "code",
