--- a/01--edi/05--xlsx.ipynb
+++ b/01--edi/05--xlsx.ipynb
@@ -11,585 +11,111 @@
     "\n",
     "Excel jaki jest kazdy widzi\n",
     "\n",
-    "- https://dane.gov.pl/dataset/1076/resource/21226"
+    "- https://dane.gov.pl/dataset/1076/resource/21226\n",
+    "- https://uek-krakow.s3-eu-west-1.amazonaws.com/data-science/datasets/covid-rogalski.xlsx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting to dane.gov.pl (185.41.93.178:443)\n",
-      "21226                100% |********************************|  3594  0:00:00 ETA\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 16052\r\n",
-      "drwxr-xr-x    2 root     root          4096 Jan 31 14:07 \u001b[1;34m.\u001b[m\r\n",
-      "drwxr-xr-x    4 root     root          4096 Jan 31 14:07 \u001b[1;34m..\u001b[m\r\n",
-      "-rw-r--r--    1 root     root      16427105 Jan 31 14:06 \u001b[0;0mSprawozdania_operatywne_za_2019_A.zip\u001b[m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls -la datasets"
+    "!wget https://uek-krakow.s3-eu-west-1.amazonaws.com/data-science/datasets/covid-rogalski.xlsx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive:  datasets/Sprawozdania_operatywne_za_2019_A.zip\n",
-      "replace datasets/Sprawozdanie_operatywne_za_01_2019.xlsx? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!unzip datasets/Sprawozdania_operatywne_za_2019_A.zip -d datasets "
+    "pip install xlrd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: xlrd in /root/workspace/.venv/lib/python3.7/site-packages (1.2.0)\n",
-      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install xlrd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['TYTUŁ',\n",
-      " 'SPIS TREŚCI   ',\n",
-      " 'UWAGA',\n",
-      " 'TABLICA 1',\n",
-      " 'TABLICA 2  ',\n",
-      " 'TABLICA 3',\n",
-      " 'TABLICA 4 ',\n",
-      " 'TABLICA 5   ',\n",
-      " 'TABLICA 6',\n",
-      " 'TABLICA  7',\n",
-      " 'TABLICA 8 ',\n",
-      " 'TABLICA 9 ',\n",
-      " 'TABLICA 10 ',\n",
-      " 'TABLICA 11',\n",
-      " 'TABLICA 12',\n",
-      " 'TABLICA 13',\n",
-      " 'TABLICA 14',\n",
-      " 'TABLICA 15 ',\n",
-      " 'TABLICA 16  ',\n",
-      " 'TYTUŁ-środ.europejskie',\n",
-      " 'TABLICA 17',\n",
-      " 'TABLICA 18 ',\n",
-      " 'TABLICA 19',\n",
-      " 'TABLICA 20',\n",
-      " 'WYKRES1',\n",
-      " 'WYKRES2',\n",
-      " 'WYKRES3',\n",
-      " 'WYKRES4',\n",
-      " 'WYKRES5',\n",
-      " 'WYKRES6',\n",
-      " 'WYKRES7',\n",
-      " 'Dochody',\n",
-      " 'Wydatki',\n",
-      " 'Plan budżetu dochodów',\n",
-      " 'Plan budżetu wydatków']\n",
-      "Columns count 14\n",
-      "Row count 28\n",
-      "14\n",
-      "28\n",
-      "'Deficyt -28500000.0'\n",
-      "2\n",
-      "[387734520.0, 416234520.0, -28500000.0]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[['Tablica 1      ',\n",
-       "  '',\n",
-       "  'ZESTAWIENIE  OGÓLNE  Z  WYKONANIA  BUDŻETU  PAŃSTWA',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  'Wyszczególnienie',\n",
-       "  '',\n",
-       "  '1',\n",
-       "  'I.     DOCHODY',\n",
-       "  'II.    WYDATKI',\n",
-       "  'III.   DEFICYT / NADWYŻKA',\n",
-       "  'IV.  ŚRODKI PRZEKAZANE NA FINANSOWANIE ',\n",
-       "  '       BUDŻETU ŚRODKÓW EUROPEJSKICH',\n",
-       "  'V.  DEFICYT / NADWYŻKA BUDŻETU ŚRODKÓW EUROPEJSKICH',\n",
-       "  'VI.  FINANSOWANIE   ( - III + IV )   ',\n",
-       "  '      1.   Krajowe ',\n",
-       "  '            (1.1 + 1.2 + 1.3 + 1.4 + 1.5 + 1.6 + 1.7 - 1.8 - 1 .9)',\n",
-       "  '      1.  1.  bony skarbowe ',\n",
-       "  '      1.  2.  obligacje',\n",
-       "  '      1.  3.  środki przechodzące z roku ubiegłego',\n",
-       "  '      1.  4.  pożyczki',\n",
-       "  '      1.  5.  zarządzanie płynnością sektora publicznego',\n",
-       "  '      1.  6.  pozostałe przychody i rozchody',\n",
-       "  '      1.  7.  prefinansowanie zadań z udziałem środków z UE',\n",
-       "  '      1.  8.  lokaty',\n",
-       "  '      1.  9.  środki na rachunkach budżetowych',\n",
-       "  '      2.   Zagraniczne',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  'Ustawa',\n",
-       "  'budżetowa',\n",
-       "  'na 2019 rok',\n",
-       "  2.0,\n",
-       "  387734520.0,\n",
-       "  416234520.0,\n",
-       "  -28500000.0,\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  -15565291.0,\n",
-       "  44065291.0,\n",
-       "  ' ',\n",
-       "  56287820.0,\n",
-       "  0.0,\n",
-       "  57051751.0,\n",
-       "  9000000.0,\n",
-       "  -222161.0,\n",
-       "  -701700.0,\n",
-       "  25156.0,\n",
-       "  134774.0,\n",
-       "  0.0,\n",
-       "  9000000.0,\n",
-       "  -12222529.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  'Wykonanie',\n",
-       "  '',\n",
-       "  'I ',\n",
-       "  3.0,\n",
-       "  38737015.88876,\n",
-       "  32149648.836799998,\n",
-       "  6587367.051960003,\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  133332.2569300003,\n",
-       "  -6587367.051959994,\n",
-       "  ' ',\n",
-       "  -6013804.338419994,\n",
-       "  0.0,\n",
-       "  8887464.58702,\n",
-       "  13501931.93716,\n",
-       "  546.442,\n",
-       "  659555.7078899994,\n",
-       "  -14060.52084,\n",
-       "  27782.90353,\n",
-       "  39758222.30876,\n",
-       "  -10681196.913580002,\n",
-       "  -573562.7135399999,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' I - II ',\n",
-       "  4.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  'I - III',\n",
-       "  5.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  'Wskaźniki',\n",
-       "  ' ',\n",
-       "  '3:2',\n",
-       "  6.0,\n",
-       "  0.0999060281987789,\n",
-       "  0.07723926606760054,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.15577899768615341,\n",
-       "  1.5002146596844446,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.20614438638016233,\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.04692668052086437,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  '4:2',\n",
-       "  7.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  'w tys. zł',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '5:2',\n",
-       "  8.0,\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  ' ',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  0.0,\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  '',\n",
-       "  ' ',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '',\n",
-       "  '']]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import xlrd\n",
     "from pprint import pprint as pp\n",
     "\n",
-    "filepath = 'datasets/Sprawozdanie_operatywne_za_01_2019.xlsx'\n",
+    "filepath = 'covid-rogalski.xlsx'\n",
     "\n",
     "def parse_file(datafile):\n",
     "    workbook = xlrd.open_workbook(datafile)\n",
-    "    pp(workbook.sheet_names())\n",
-    "    sheet = workbook.sheet_by_name('TABLICA 1')\n",
-    "    print(\"Columns count {}\".format(sheet.ncols))\n",
-    "    print(\"Row count {}\".format(sheet.nrows))\n",
-    "    \n",
-    "    data = [[sheet.cell_value(r, col)\n",
-    "            for col in range(sheet.ncols)\n",
-    "                for r in range (sheet.nrows)]]\n",
-    "    \n",
-    "    #Usfule commands\n",
-    "    pp(sheet.ncols)\n",
-    "    pp(sheet.nrows)\n",
-    "    pp(\"Deficyt {}\".format(sheet.cell_value(11, 1)))\n",
-    "    pp(sheet.cell_type(11, 1))\n",
-    "    pp(sheet.col_values(1, start_rowx=9, end_rowx=12))\n",
-    "    \n",
-    "    return data\n",
-    "    \n",
-    "parse_file(filepath)"
+    "    return workbook\n",
+    "\n",
+    "excel = parse_file(filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-c5d84736ba45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data"
+    "pp(excel.sheet_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sheet = excel.sheet_by_name('Aktualna sytuacja w Polsce')\n",
+    "print(\"Columns count {}\".format(sheet.ncols))\n",
+    "print(\"Row count {}\".format(sheet.nrows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp(\"Polska {}\".format(sheet.cell_value(18, 2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "districts = [sheet.cell_value(i, 1) for i in range(2,18)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confirmed = [sheet.cell_value(i, 2) for i in range(2,18)]\n",
+    "active = [sheet.cell_value(i, 6) for i in range(2,18)]\n",
+    "deaths = [sheet.cell_value(i, 3) for i in range(2,18)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = zip(districts, confirmed, active, deaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(data)"
    ]
   },
   {
