--- a/01--edi/07--xml-html.ipynb
+++ b/01--edi/07--xml-html.ipynb
@@ -87,25 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting bs4\n",
-      "  Downloading https://files.pythonhosted.org/packages/10/ed/7e8b97591f6f456174139ec089c769f89a94a1a4025fe967691de971f314/bs4-0.0.1.tar.gz\n",
-      "Collecting beautifulsoup4\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cb/a1/c698cf319e9cfed6b17376281bd0efc6bfc8465698f54170ef60a485ab5d/beautifulsoup4-4.8.2-py3-none-any.whl (106kB)\n",
-      "\u001b[K     |████████████████████████████████| 112kB 661kB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting soupsieve>=1.2\n",
-      "  Downloading https://files.pythonhosted.org/packages/81/94/03c0f04471fc245d08d0a99f7946ac228ca98da4fa75796c507f61e688c2/soupsieve-1.9.5-py2.py3-none-any.whl\n",
-      "Installing collected packages: soupsieve, beautifulsoup4, bs4\n",
-      "    Running setup.py install for bs4 ... \u001b[?25ldone\n",
-      "\u001b[?25hSuccessfully installed beautifulsoup4-4.8.2 bs4-0.0.1 soupsieve-1.9.5\n",
-      "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: bs4 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/lib/python3.8/site-packages (0.0.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/lib/python3.8/site-packages (from bs4) (4.9.3)\n",
+      "Requirement already satisfied: soupsieve>1.2; python_version >= \"3.0\" in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/lib/python3.8/site-packages (from beautifulsoup4->bs4) (2.0.1)\n",
+      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.4 is available.\n",
+      "You should consider upgrading via the '/Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -115,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,14 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: lxml in /Users/jkanclerz/.platformio/penv/lib/python3.8/site-packages (4.5.2)\r\n"
+      "Requirement already satisfied: lxml in /Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/lib/python3.8/site-packages (4.6.1)\n",
+      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.2.4 is available.\n",
+      "You should consider upgrading via the '/Users/jkanclerz/myplace/dydaktyka/przetwarzanie-dokumnetow/data-science-workshops-2021/.venv/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -177,16 +172,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded = bs(sample_xml, \"html.parser\")"
+    "loaded = bs(sample_xml)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soups = loaded.select('author firstname')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jakub\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(soups[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,19 +279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Wykop(count=325, title='Trwa spontaniczny protest branży fitness w Warszawie.', description='\"100 tysięcy miejsc pracy jest na szali\"', tags=['#polska', '#ekonomia', '#silownia', '#mikrokoksy', '#koronawirus']),\n",
-       " Wykop(count=112, title='Braun zdjęty z wizji w „Forum” TVP Info. Promował książę o fałszywości pandemii', description='Grzegorz Braun kilkanaście minut po starcie programu „Forum” w TVP Info zakończył w nim udział. Prowadzący Adrian Klarenbach bezskutecznie prosił go, żeby nie eksponował do kamery okładki książki „Fałszywa pandemia”, bo to lokowanie produktu niedozwolone w programie publicystycznym.', tags=['#polityka', '#polska', '#wydarzenia', '#koronawirus', '#tvpis', '#tvpiscodzienny']),\n",
-       " Wykop(count=1952, title='KOLEJNY REKORD! 9622 nowych przypadków koronawirusa, 84 zgonów', description='Ministerstwo Zdrowia w sobotnim komunikacie poinformowało o 9622 nowych i potwierdzonych przypadkach koronawirusa. To niestety kolejny rekordowy wynik zakażeń w Polsce. Zmarło również 84 osób', tags=['#koronawirus', '#polska', '#krakow', '#covid19', '#wirus', '#bekazpisu']),\n",
-       " Wykop(count=599, title='Toksyczna książka \"Falszywa Pandemia\"', description='Uwaga, książka \"Falszywa Pandemia\" jest pełna głupot i  manipulacji. Książkę wydał Braun, a polecana jest miedzy innymi przez Radio Maryja', tags=['#nauka', '#koronawirus', '#ksiazki', '#bekazkatoli', '#medycyna', '#ciekawostki'])]"
+       "[Wykop(count=263, title='Polityk PiS lata jeździł bez prawka. Prokuratura nie widziała problemu', description='I po to potrzebne są sądy niezależne od rządu. Prokuratura broniła polityka, gdzie powinna oskarżać.', tags=['#polska', '#sady', '#pis', '#prokuratura', '#polityka']),\n",
+       " Wykop(count=179, title='Adam Małysz ma pomysł na sceptyków. \"Powinni dostać przepustkę do szpitala\"', description='- Ja się zetknąłem z opinią, że rząd mi zapłacił za ujawnienie swojego zakażenia. Absurd. Zrobiłem to sam z własnej woli. Przeszedłem tę chorobę. Oczywiście nie tak tragicznie, jak niektórzy, ale ja do dziś tego nie lekceważę - mówi Adam Małysz.', tags=['#polska', '#koronawirus', '#covid19', '#zdrowie', '#sport', '#skoki']),\n",
+       " Wykop(count=375, title='Janusze z Allegro nacinają ludzi na chińskie koncentratory tlenu w cenie 2.5x', description='Janusze biznesu żerują na Allegro na zdesperowanych ludziach sprzedając po kilkukrotnie zawyżonej cenie domowe koncentratory tlenu z chin przydatne w przechodzeniu korony.', tags=['#polska', '#koronawirus', '#januszebiznesu']),\n",
+       " Wykop(count=2699, title='To nie jest śmieszne. Rządzący nie chcą opublikować ustawy, którą przyjęli.', description='Pośpiech, niedokładność, nocne wrzutki niezwiązane z procedowaną ustawą, wymiany kadrowe pod płaszczykiem walki z COVID-19 – to już codzienność. Rządzący nie chcą nawet opublikować ustawy, którą sami przez pomyłkę przyjęli', tags=['#polska', '#prawo', '#praworzadnosc', '#bekazpisu', '#neuropa', '#bekazprawakow'])]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,33 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'#polska': 3,\n",
-       " '#ekonomia': 1,\n",
-       " '#silownia': 1,\n",
-       " '#mikrokoksy': 1,\n",
-       " '#koronawirus': 4,\n",
+       "{'#polska': 4,\n",
+       " '#sady': 1,\n",
+       " '#pis': 1,\n",
+       " '#prokuratura': 1,\n",
        " '#polityka': 1,\n",
-       " '#wydarzenia': 1,\n",
-       " '#tvpis': 1,\n",
-       " '#tvpiscodzienny': 1,\n",
-       " '#krakow': 1,\n",
+       " '#koronawirus': 2,\n",
        " '#covid19': 1,\n",
-       " '#wirus': 1,\n",
+       " '#zdrowie': 1,\n",
+       " '#sport': 1,\n",
+       " '#skoki': 1,\n",
+       " '#januszebiznesu': 1,\n",
+       " '#prawo': 1,\n",
+       " '#praworzadnosc': 1,\n",
        " '#bekazpisu': 1,\n",
-       " '#nauka': 1,\n",
-       " '#ksiazki': 1,\n",
-       " '#bekazkatoli': 1,\n",
-       " '#medycyna': 1,\n",
-       " '#ciekawostki': 1}"
+       " '#neuropa': 1,\n",
+       " '#bekazprawakow': 1}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,33 +370,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('#koronawirus', 4),\n",
-       " ('#polska', 3),\n",
-       " ('#ciekawostki', 1),\n",
-       " ('#medycyna', 1),\n",
-       " ('#bekazkatoli', 1),\n",
-       " ('#ksiazki', 1),\n",
-       " ('#nauka', 1),\n",
+       "[('#polska', 4),\n",
+       " ('#koronawirus', 2),\n",
+       " ('#bekazprawakow', 1),\n",
+       " ('#neuropa', 1),\n",
        " ('#bekazpisu', 1),\n",
-       " ('#wirus', 1),\n",
+       " ('#praworzadnosc', 1),\n",
+       " ('#prawo', 1),\n",
+       " ('#januszebiznesu', 1),\n",
+       " ('#skoki', 1),\n",
+       " ('#sport', 1),\n",
+       " ('#zdrowie', 1),\n",
        " ('#covid19', 1),\n",
-       " ('#krakow', 1),\n",
-       " ('#tvpiscodzienny', 1),\n",
-       " ('#tvpis', 1),\n",
-       " ('#wydarzenia', 1),\n",
        " ('#polityka', 1),\n",
-       " ('#mikrokoksy', 1),\n",
-       " ('#silownia', 1),\n",
-       " ('#ekonomia', 1)]"
+       " ('#prokuratura', 1),\n",
+       " ('#pis', 1),\n",
+       " ('#sady', 1)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,33 +406,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('#koronawirus', 4),\n",
-       " ('#polska', 3),\n",
-       " ('#ekonomia', 1),\n",
-       " ('#silownia', 1),\n",
-       " ('#mikrokoksy', 1),\n",
+       "[('#polska', 4),\n",
+       " ('#koronawirus', 2),\n",
+       " ('#sady', 1),\n",
+       " ('#pis', 1),\n",
+       " ('#prokuratura', 1),\n",
        " ('#polityka', 1),\n",
-       " ('#wydarzenia', 1),\n",
-       " ('#tvpis', 1),\n",
-       " ('#tvpiscodzienny', 1),\n",
-       " ('#krakow', 1),\n",
        " ('#covid19', 1),\n",
-       " ('#wirus', 1),\n",
+       " ('#zdrowie', 1),\n",
+       " ('#sport', 1),\n",
+       " ('#skoki', 1),\n",
+       " ('#januszebiznesu', 1),\n",
+       " ('#prawo', 1),\n",
+       " ('#praworzadnosc', 1),\n",
        " ('#bekazpisu', 1),\n",
-       " ('#nauka', 1),\n",
-       " ('#ksiazki', 1),\n",
-       " ('#bekazkatoli', 1),\n",
-       " ('#medycyna', 1),\n",
-       " ('#ciekawostki', 1)]"
+       " ('#neuropa', 1),\n",
+       " ('#bekazprawakow', 1)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,6 +473,13 @@
     "    for row in first5:\n",
     "        destination_file.write(json.dumps(row._asdict()) + \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
