--- a/01--edi/09--json.ipynb
+++ b/01--edi/09--json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,30 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://data.githubarchive.org/2017-06-05-0.json.gz'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "urls[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,16 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 65M\tgithub.json\r\n"
+     ]
+    }
+   ],
    "source": [
     "!du -h github.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +104,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'actor': {'avatar_url': 'https://avatars.githubusercontent.com/u/20188899?',\n",
+      "           'display_login': 'jviriato',\n",
+      "           'gravatar_id': '',\n",
+      "           'id': 20188899,\n",
+      "           'login': 'jviriato',\n",
+      "           'url': 'https://api.github.com/users/jviriato'},\n",
+      " 'created_at': '2017-06-05T00:00:00Z',\n",
+      " 'id': '5999726536',\n",
+      " 'payload': {'before': 'ae90a356c5eea74763e3d8b749910cc5b7ee2e08',\n",
+      "             'commits': [{'author': {'email': '2d773a7c58a84cdc5f6f61665ae9d292fb2e0870@inf.ufsm.br',\n",
+      "                                     'name': 'José Victor Viriato'},\n",
+      "                          'distinct': True,\n",
+      "                          'message': 't7',\n",
+      "                          'sha': 'd3210f4a7d00439e0034320d901bfe1b258c61e2',\n",
+      "                          'url': 'https://api.github.com/repos/jviriato/elc117/commits/d3210f4a7d00439e0034320d901bfe1b258c61e2'},\n",
+      "                         {'author': {'email': '2d773a7c58a84cdc5f6f61665ae9d292fb2e0870@inf.ufsm.br',\n",
+      "                                     'name': 'José Victor Viriato'},\n",
+      "                          'distinct': True,\n",
+      "                          'message': \"Merge branch 'master' of \"\n",
+      "                                     'https://github.com/jviriato/elc117',\n",
+      "                          'sha': 'd0e376abf0e3744f5d9fb2e61cb635da9f3143e4',\n",
+      "                          'url': 'https://api.github.com/repos/jviriato/elc117/commits/d0e376abf0e3744f5d9fb2e61cb635da9f3143e4'}],\n",
+      "             'distinct_size': 2,\n",
+      "             'head': 'd0e376abf0e3744f5d9fb2e61cb635da9f3143e4',\n",
+      "             'push_id': 1779765709,\n",
+      "             'ref': 'refs/heads/master',\n",
+      "             'size': 2},\n",
+      " 'public': True,\n",
+      " 'repo': {'id': 84136609,\n",
+      "          'name': 'jviriato/elc117',\n",
+      "          'url': 'https://api.github.com/repos/jviriato/elc117'},\n",
+      " 'type': 'PushEvent'}\n"
+     ]
+    }
+   ],
    "source": [
     "from pprint import pprint as pp\n",
     "pp(sample_object)"
@@ -119,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +226,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'PushEvent': 656,\n",
+       "         'IssueCommentEvent': 43,\n",
+       "         'IssuesEvent': 32,\n",
+       "         'PullRequestEvent': 40,\n",
+       "         'WatchEvent': 56,\n",
+       "         'PullRequestReviewCommentEvent': 3,\n",
+       "         'CreateEvent': 116,\n",
+       "         'ForkEvent': 19,\n",
+       "         'MemberEvent': 2,\n",
+       "         'DeleteEvent': 24,\n",
+       "         'ReleaseEvent': 1,\n",
+       "         'GollumEvent': 5,\n",
+       "         'PublicEvent': 2})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,11 +294,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('https://api.github.com/repos/Lombiq/Orchard-External-Pages', 12),\n",
+       " ('https://api.github.com/repos/everypolitician-scrapers/macedonia-sobranie',\n",
+       "  11),\n",
+       " ('https://api.github.com/repos/Lombiq/Orchard-Token-Title', 11),\n",
+       " ('https://api.github.com/repos/ssbattousai/Cuda38', 8),\n",
+       " ('https://api.github.com/repos/kfcampbell/GithubBotRepo', 6),\n",
+       " ('https://api.github.com/repos/multicharts/scanner-check', 6),\n",
+       " ('https://api.github.com/repos/everypolitician-scrapers/philippines-house-of-representatives',\n",
+       "  5),\n",
+       " ('https://api.github.com/repos/abodiab/OOS', 4),\n",
+       " ('https://api.github.com/repos/Kieves/kieves.github.io', 4),\n",
+       " ('https://api.github.com/repos/Lombiq/Om.Orchard.SocialMetaTags', 4)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "most_active_repos.most_common(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Jakie są najpopularniejsze języki programowania w github?\n",
+    "\n",
+    "```\n",
+    "\"{}/languages\".format(repoUrl)\n",
+    "```"
    ]
   },
   {
@@ -256,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
