--- a/01--edi/03--text.ipynb
+++ b/01--edi/03--text.ipynb
@@ -21,9 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-11-20 10:17:32--  https://s3.eu-central-1.amazonaws.com/jkan.pl/data-science/uek/wykop.txt\n",
+      "Resolving s3.eu-central-1.amazonaws.com (s3.eu-central-1.amazonaws.com)... 52.219.74.84\n",
+      "Connecting to s3.eu-central-1.amazonaws.com (s3.eu-central-1.amazonaws.com)|52.219.74.84|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 9179766 (8.8M) [text/plain]\n",
+      "Saving to: ‘wykop.txt.1’\n",
+      "\n",
+      "wykop.txt.1         100%[===================>]   8.75M  8.09MB/s    in 1.1s    \n",
+      "\n",
+      "2020-11-20 10:17:33 (8.09 MB/s) - ‘wykop.txt.1’ saved [9179766/9179766]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://s3.eu-central-1.amazonaws.com/jkan.pl/data-science/uek/wykop.txt"
    ]
